--- a/index.html
+++ b/index.html
@@ -20,16 +20,68 @@
 					APPController.init();
 				});
 			});
+
+			function clearResults(element) {
+				var myClasses = element.classList;
+   				var itemNum = myClasses[2].split('-')[1];
+   				var id = $(".hidden-" + itemNum).text();
+				$(".selector").empty();
+				APPController.loadSong(id);
+			}
 		</script>
 	</head>
 	<body>
 		<div class="container">
 			<div class="topBar">
 				<h1>MusicSeek</h1>
-				<input type="text" autocomplete="off" name="song" id="song"><br><br>
+				<input placeholder="Search..." type="search" autocomplete="off" name="song" id="song"><br><br>
 				<!--<button id="submit" onClick="APPController.init();">Submit</button>-->
 			</div>
 			<div class="selector">
+			</div>
+			<div class="songDetails">
+				<!--<div class="songInfo">
+					<img class="albumArtDetail" src="https://i.scdn.co/image/ab67616d0000b2738a3f0a3ca7929dea23cd274c">
+					<h2>Billie Eilish</h2><br>
+					<h3>lovely</h3><br>
+					<table>
+						<tr>
+							<td>Track length <b>3:20</b></td>
+							<td>Key <b>Db Major</b></td>
+						</tr>
+						<tr>
+							<td>Camelot <b>3B</b></td>
+							<td>Tempo <b>171</b></td>
+						</tr>
+						<tr>
+							<td>Loudness <b>-5.934 dB</b></td>
+							<td>Release Date <b>March 20, 2020</b></td>
+						</tr>
+						<tr>
+							<td>Album <b>lovely</b></td>
+						</tr>
+					</table>
+				</div>
+				<div class="songAnalysis">
+					<h4>Song Analysis</h4>
+					<table>
+						<tr>
+							<td>Track length <b>3:20</b></td>
+							<td>Key <b>Db Major</b></td>
+						</tr>
+						<tr>
+							<td>Camelot <b>3B</b></td>
+							<td>Tempo <b>171</b></td>
+						</tr>
+						<tr>
+							<td>Loudness <b>-5.934 dB</b></td>
+							<td>Release Date <b>March 20, 2020</b></td>
+						</tr>
+						<tr>
+							<td>Album <b>lovely</b></td>
+						</tr>
+					</table>
+				</div>-->
 			</div>
 		</div>
 	</body>
