--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<body>
 		<div class="container">
 			<div class="topBar">
-				<h1>MusicSeek</h1>
+				<a href="./index.html"><h1>MusicSeek</h1></a>
 				<input placeholder="Search..." type="search" autocomplete="off" name="song" id="song"><br><br>
 				<!--<button id="submit" onClick="APPController.init();">Submit</button>-->
 			</div>
