--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				$(element).toggleClass('animate');
 				$(element).toggleClass('liked');
 				$(element).toggleClass("far fas");
-				var id =  $("p.hidden").text();
+				var id =  $("p.songId").text();
 
 				loadItems();
 
@@ -100,49 +100,8 @@
 			<div class="selector">
 			</div>
 			<div class="songDetails">
-				<!--<div class="songInfo">
-					<img class="albumArtDetail" src="https://i.scdn.co/image/ab67616d0000b2738a3f0a3ca7929dea23cd274c">
-					<h2>Billie Eilish</h2><br>
-					<h3>lovely</h3><br>
-					<table>
-						<tr>
-							<td>Track length <b>3:20</b></td>
-							<td>Key <b>Db Major</b></td>
-						</tr>
-						<tr>
-							<td>Camelot <b>3B</b></td>
-							<td>Tempo <b>171</b></td>
-						</tr>
-						<tr>
-							<td>Loudness <b>-5.934 dB</b></td>
-							<td>Release Date <b>March 20, 2020</b></td>
-						</tr>
-						<tr>
-							<td>Album <b>lovely</b></td>
-						</tr>
-					</table>
-				</div>
-				<div class="songAnalysis">
-					<h4>Song Analysis</h4>
-					<table>
-						<tr>
-							<td>Track length <b>3:20</b></td>
-							<td>Key <b>Db Major</b></td>
-						</tr>
-						<tr>
-							<td>Camelot <b>3B</b></td>
-							<td>Tempo <b>171</b></td>
-						</tr>
-						<tr>
-							<td>Loudness <b>-5.934 dB</b></td>
-							<td>Release Date <b>March 20, 2020</b></td>
-						</tr>
-						<tr>
-							<td>Album <b>lovely</b></td>
-						</tr>
-					</table>
-				</div>-->
 			</div>
+			<div class="recommended">
 		</div>
 	</body>
 </html>
