--- a/index.html
+++ b/index.html
@@ -141,6 +141,10 @@
 
 				function displayLoading() {
 					$('#loading').show();
+
+					setTimeout(() => {
+				        $('#loading').fadeOut("slow");
+				    }, 5000);
 				}
 
 				function hideLoading() {
